# lemon

./: .gitignore  LICENSE  README.md  dashboard.js  data.json  index.html  mock_data.json  pyproject.toml  robots.txt  sitemap.xml  style.css
.github/workflows/: ip-probe.yml  reclassify.yml  refresh.yml
config/: complaint_phrases.json  hn_queries.json  model_keywords.json  releases.json  subreddits.json
docs/: v0.1-launch-plan.md
phase2/: README.md
phase2/prompts/: clustering.md  noise_floor.md  reconciliation.md
phase5/: README.md  dashboard.js  data.json  index.html  mock_data.json  style.css
scrapers/: common.py  hn.py  reddit_historical.py  reddit_recent.py
scripts/: build_standalone.py  corpus_stats.py  cron_refresh.py  healthcheck.py  phase2_sample.py  reclassify.py  run_phase1.py  v0_classify.py
