[project]
name = "lemon"
version = "0.1.0"
description = "Crowd-sourced sentiment barometer for Claude and Codex — weekly complaint rate from public discourse."
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7",
    "requests>=2.31",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scrapers*"]
